--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -9,6 +9,7 @@
   display: grid;
   place-items: center;
   position: relative;
+  margin-bottom: 10rem;
 }
 .hero__background {
   text-align: center;
