--- a/src/css/base.css
+++ b/src/css/base.css
@@ -4,8 +4,8 @@
   --color-secondary: rgb(103, 102, 102);
   --color-titles: #fff;
   --color-texts: #e0e0e0;
-  --color-border-dark-bottom: #444444; /* gris medio oscuro */
-  --color-border-light-bottom: #666666; /* gris medio claro */
+  --color-border-dark-bottom: 1px solid #444444; /* gris medio oscuro */
+  --color-border-light-bottom: 1px solid #666666; /* gris medio claro */
 
   /* Fonts */
   --font-family-heading: 'Montserrat', sans-serif;
@@ -13,10 +13,10 @@
 
   /* Sizes */
   --font-size-heading: 2.5rem; /* Main titles */
-  --font-size-subheading: 1.75rem; /* Subtitles */
-  --font-size-buttons-slider: 1.5rem;
-  --font-size-body: 1rem; /* Normal text */
-  --font-size-small: 0.875rem; /* small text or captions */
+  --font-size-subheading: 1.8rem; /* Subtitles */
+  --font-size-buttons-slider: 1.45rem;
+  --font-size-body: 1.6rem; /* Normal text */
+  --font-size-small: 1rem; /* small text or captions */
 
   /*Weight fonts */
   --font-weight-heading: 700; /* bold for titles */
@@ -24,7 +24,7 @@
 
   /* line height */
   --line-height-heading: 1.2; /* for titles */
-  --line-height-body: 1.5; /* for spans, p, li*/
+  --line-height-body: 1.6; /* for spans, p, li*/
 
   /* hover in buttons */
   --color-btn: #e0e0e0; /* gris claro */
@@ -58,4 +58,11 @@ body {
     6rem;
   gap: 1rem;
   margin: 0 auto;
+}
+.section--hidden {
+  opacity: 0;
+  will-change: opacity, transform;
+  transform: translateY(5rem);
+  transition: opacity 0.8s ease-out,
+    transform 0.8s cubic-bezier(0.22, 1, 0.36, 1);
 }
