--- a/src/css/eventos.css
+++ b/src/css/eventos.css
@@ -1,5 +1,64 @@
 .eventos {
-  background-color: orangered;
+  background-color: var(--color-primary);
   grid-column: 1 / -1;
   grid-row: 4 / 5;
+  display: grid;
+  grid-template-columns: minmax(15rem, 1fr) minmax(20rem, 1fr);
+  gap: 1rem;
+  justify-items: center;
+  align-items: center;
+  border-bottom: var(--color-border-light-bottom);
+  margin-top: 10rem;
+  margin-bottom: 20rem;
+}
+.eventos__images {
+  grid-row: 1 / -1;
+  grid-column: 1 / 2;
+  width: 100%;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  display: grid;
+  margin-top: 3rem;
+}
+.eventos__images--img {
+  margin-top: 3rem;
+  width: 50%;
+  position: relative;
+  padding-top: calc(100% * 7 / 8);
+  overflow: hidden;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+.eventos__images--img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
+}
+.eventos__text {
+  grid-row: 1 / -1;
+  grid-column: 2 / 3;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+
+.eventos__text__ul {
+  display: grid;
+  align-self: center;
+  justify-self: start;
+}
+.eventos__text__heading {
+  font-size: var(--font-size-heading);
+  font-weight: var(--font-weight-heading);
+  line-height: var(--line-height-heading);
+}
+.eventos__text__ul--li {
+  font-size: var(--font-size-body);
+  line-height: var(--line-height-body);
 }
