--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,5 +1,65 @@
 .gallery {
-  background-color: red;
   grid-column: 1 / -1;
   grid-row: 6 / 7;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(12, 5vw);
+  grid-gap: 1.5rem;
+  padding: 1.5rem;
+  position: relative;
+  margin-top: 10rem;
+  margin-bottom: 20rem;
+}
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+.gallery__item--1 {
+  grid-row: 1 / span 7;
+  grid-column: 3 / span 3;
+}
+.gallery__item--2 {
+  grid-row: 1 / span 4;
+  grid-column: 1 / span 2;
+}
+.gallery__item--3 {
+  grid-row: 5 / span 3;
+  grid-column: 1 / span 2;
+}
+.gallery__item--4 {
+  grid-row: 1 / span 3;
+  grid-column: 6 / span 3;
+}
+.gallery__item--5 {
+  grid-row: 4 / span 4;
+  grid-column: 6 / span 3;
+}
+.gallery__item--6 {
+  grid-row: 8 / span 5;
+  grid-column: 1 / span 3;
+}
+.gallery__item--7 {
+  grid-row: 8 / -1;
+  grid-column: 6 / -1;
+}
+.gallery__item--8 {
+  grid-row: 8 / -1;
+  grid-column: 4 / span 2;
+}
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 1;
+  overflow: hidden;
+}
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
