--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -3,11 +3,31 @@
   grid-column: 1 / -1;
   grid-row: 1 / 2;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  align-content: center;
+  justify-content: center;
+  position: relative;
+  z-index: 100;
+}
+
+.sticky {
+  position: fixed;
+  width: 100%;
+  min-width: 100%;
+  background-color: var(--color-primary);
+  animation: slideDown 0.3s linear;
+  z-index: 999;
+  /* Asegurar que mantiene el layout del nav */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   align-content: center;
   justify-content: center;
 }
 
+.nav,
+.sticky {
+  height: 10rem;
+}
 .nav__logo {
   display: grid;
   align-content: center;
@@ -17,8 +37,8 @@
 
 .nav__logo img {
   height: 100%;
-  max-height: 10rem; /* visual control of size */
-  width: auto; /* maintain proportion */
+  max-height: 10rem;
+  width: auto;
   object-fit: contain;
   padding: 1rem;
 }
@@ -27,7 +47,8 @@
   grid-auto-flow: column;
   justify-content: space-between;
   align-content: center;
-  padding: 3rem;
+  grid-template-columns: repeat(5, minmax(min-content, 1fr));
+  padding: 0rem;
   list-style: none;
 }
 .nav__a {
