--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,7 @@
 @import url(base.css);
+@import url(animations.css);
 @import url(nav.css);
+@import url(ham.css);
 @import url(hero.css);
 @import url(slider.css);
 @import url(eventos.css);
