--- a/src/css/eventos.css
+++ b/src/css/eventos.css
@@ -11,6 +11,41 @@
   margin-top: 10rem;
   margin-bottom: 20rem;
 }
+
+@media only screen and (max-width: 900px) {
+  .eventos {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .eventos__images {
+    grid-row: auto !important;
+    grid-column: auto !important;
+    grid-row: 1;
+    grid-column: 1;
+    margin-top: 0;
+  }
+
+  .eventos__images--img {
+    margin-top: 0;
+  }
+  .eventos__text {
+    grid-row: auto !important;
+    grid-column: auto !important;
+    grid-row: 2;
+    grid-column: 1;
+    padding: 1rem;
+    margin-bottom: 4rem;
+  }
+  .eventos__text__ul {
+    justify-self: center;
+    text-align: left;
+  }
+}
+
 .eventos__images {
   grid-row: 1 / -1;
   grid-column: 1 / 2;
