--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -10,6 +10,12 @@
   margin-top: 10rem;
   margin-bottom: 20rem;
 }
+
+@media only screen and (max-width: 900px) {
+  .gallery {
+    margin-bottom: 5rem;
+  }
+}
 .gallery__img {
   width: 100%;
   height: 100%;
