--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -35,14 +35,16 @@
   width: 100%;
 }
 .footer__icons--icon {
-  width: 100%;
-  height: 20rem;
+  /* width: 100%;
+  height: 20rem; */
+  width: 6rem;
+  height: 6rem;
   display: grid;
   place-items: center;
 }
 .footer__icons--icon img {
-  width: 100%;
-  max-width: 6rem;
+  width: 6rem;
+  height: 6rem;
   height: auto;
 }
 
