--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -16,6 +16,9 @@
   .footer {
     padding: 0;
   }
+  .footer__heading {
+    margin-bottom: 3rem;
+  }
 }
 .footer__heading {
   font-size: var(--font-size-heading);
@@ -35,8 +38,6 @@
   width: 100%;
 }
 .footer__icons--icon {
-  /* width: 100%;
-  height: 20rem; */
   width: 6rem;
   height: 6rem;
   display: grid;
