--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -19,6 +19,9 @@
   .footer__heading {
     margin-bottom: 3rem;
   }
+  .footer__icons {
+    margin-bottom: 3rem;
+  }
 }
 .footer__heading {
   font-size: var(--font-size-heading);
@@ -26,6 +29,7 @@
   display: grid;
   place-items: center;
   text-align: center;
+  margin-bottom: 5rem;
 }
 .footer__icons {
   grid-column: 1 / -1;
@@ -36,6 +40,7 @@
   align-items: center;
   gap: 1rem;
   width: 100%;
+  margin-bottom: 5rem;
 }
 .footer__icons--icon {
   width: 6rem;
