--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,6 +15,7 @@
 @media only screen and (max-width: 900px) {
   .footer {
     padding: 0;
+    margin-bottom: 5rem; /* Antes no estaba */
   }
   .footer__heading {
     margin-bottom: 3rem;
