--- a/src/css/ham.css
+++ b/src/css/ham.css
@@ -31,6 +31,11 @@
   display: flex;
   top: calc(100% + 0);
 }
+@media only screen and (max-width: 425px) {
+  .dropdown-menu {
+    padding: 1.5rem 2rem; /* Antes no estaba */
+  }
+}
 @media only screen and (max-width: 900px) {
   .nav {
     grid-template-columns: 1fr min-content 1fr;
